# brave-core

./: BUILD.gn
app/: brave_generated_resources.grd
browser/: brave_profile_prefs.cc  brave_tab_helpers.cc
browser/android/: brave_cosmetic_resources_tab_helper.cc
browser/extensions/: brave_extensions_browser_client_impl.cc  brave_extensions_browser_client_impl.h
browser/ipfs/: content_browser_client_helper_unittest.cc
browser/profiles/: brave_profile_manager_browsertest.cc
browser/ui/content_settings/: brave_content_setting_image_models.cc  brave_content_setting_image_models.h
browser/ui/views/profiles/: brave_avatar_toolbar_button.cc
browser/ui/webui/: brave_rewards_page_ui.cc
chromium_src/chrome/browser/profiles/: profile.cc  profile.h  profile_window.cc
chromium_src/components/search_engines/: template_url_prepopulate_data.cc
components/brave_ads/browser/: ads_service_browsertest.cc
components/brave_ads/test/: BUILD.gn
components/brave_referrals/browser/: brave_referrals_service.cc
components/definitions/: chromel.d.ts
components/ipfs/: ipfs_ports.cc  ipfs_service.h
components/ipfs/test/: BUILD.gn
components/private_channel/: BUILD.gn
components/private_channel/browser/: private_channel_ffi.cc  private_channel_service.cc  utils.cc  utils.h
patches/: chrome-VERSION.patch  chrome-browser-ui-content_settings-content_setting_image_model.cc.patch  chrome-browser-ui-toolbar-recent_tabs_sub_menu_model.cc.patch  content-public-browser-browser_context.h.patch
test/: BUILD.gn
utility/importer/: chrome_importer_unittest.cc
(+6 files in other folders)
