import("//brave/components/private_channel/buildflags/buildflags.gni")

assert(private_channel_enabled)

source_set("private_channel") {
  # Remove when https://github.com/brave/brave-browser/issues/10646 is resolved
  check_includes = false
  public_deps = [
    "//brave/components/private_channel/buildflags",
  ]

  sources = [
    "browser/constants.cc",
    "browser/constants.h",
    "browser/private_channel_ffi.cc",
    "browser/private_channel_ffi.h",
    "browser/private_channel_service.cc",
    "browser/private_channel_service.h",
    "browser/request_utils.cc",
    "browser/request_utils.h",
    "browser/utils.cc",
    "browser/utils.h",
  ]

  deps = [
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//url",
  ]
}
